Major restructure, most of code now in bf_crc class (allows for easier unit testinmg)
TODO: Add copyrights!

CMakeLists.txt - Add bf_crc class
bf_crc.cc - Brute force code now in here
bf_crc.hpp - ditto
bruteforce-crc.cc - Only includes command line intteraction
bruteforce-crc.hpp - ditto
test.sh - Old parameter removed
tests/test_bruteforce.cc - Test brute forcer - needs check to be done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,11 @@ endif()
 
 include_directories(.)
 
+add_library(crc STATIC crc.cc)
+add_library(bf_crc STATIC bf_crc.cc)
+target_link_libraries(bf_crc ${LIBS} crc)
+set(LIBS ${LIBS} bf_crc) 
+
 set(BRUTEFORCE_CRC_CMD bruteforce-crc.cc)
 add_executable(bruteforce-crc ${BRUTEFORCE_CRC_CMD})
 target_link_libraries(bruteforce-crc ${LIBS})
