--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install libboost-all-dev
+ - sudo apt-get install libboost-timer-dev
 language: cpp
 compiler:
  - clang
